# perfectlyimperfect

./: .gitignore  README.md  publish_to_github.ps1
.devcontainer/: devcontainer.json
backend/: CMakeLists.txt  main.cpp
frontend/: index.html
frontend/css/: style.css
frontend/js/: main.js
